# dailymed-crawler

./: Cargo.toml  mysql_configuration.json.dev
src/: main.rs
src/db/: connection_pool_manager.rs  mod.rs
src/entity/: company.rs  drug.rs  drug_company.rs  mod.rs  product_detail.rs  spl_detail.rs
