[package]
name = "dailymed_crawler"
version = "0.1.0"
authors = ["Mohammed Al-Ani <mohammedalanny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4.1"
reqwest = { version = "0.11", features = ["blocking", "serde_json"]}
openssl = { version="0.10.32", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.13"
chrono = { version = "0.4.19", features = ["serde"]}
#quickxml_to_serde = "0.4.1"
rand = "0.8.3"

#mysql pool
sqlx = { version = "0.5.1", features = [ "mysql", "runtime-async-std-native-tls", "chrono"] }
async-std = { version = "1.9.0", features = [ "attributes" ] }

#logger
log = "0.4.11"
env_logger = "0.8.2"